--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -12,15 +12,15 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Python (Pandas, PyTorch, NumPy, Scikit‑learn. etc.), R(ggplot2), PHP, C/C++, HTML/CSS, JavaScript, SQL.} % Skills
+    {Python (Pandas, PyTorch, NumPy, Scikit‑learn. etc.), C\#(ASP .NET, Entity framework, Fluent API), C/C++, HTML/CSS, JavaScript, SQL.} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Miscellaneous} % Category
-    {Linux, Shell (Bash/Zsh), \LaTeX (Overleaf/R Markdown), Tableau, Microsoft Office, Firebase, Git.} % Skills
+    {Linux, Shell (Bash/Zsh), \LaTeX (Overleaf), Microsoft Office, Git.} % Skills
 %---------------------------------------------------------
   \cvskill
     {Soft Skills} % Category
-    {Time Management, Teamwork, Problem-solving, Documentation, Engaging Presentation.} % Skills
+    {Time Management, Teamwork, Problem-solving, Documentation, Critical-Thinking.} % Skills
 
 \end{cvskills}
