--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-A University of Leeds graduate student who is enrolled in the Data Science and Analysis programme. Dedicated to software engineering, having two or more years of expertise, and specialising in full-stack web development, algorithms, and machine learning. Searching mostly for Machine Learning, Data Engineer, and Python Development positions.
+As a software developer, I have a strong drive to continuously improve my skills and find innovative solutions to challenges. I view every obstacle as an opportunity to learn and grow, and I am constantly seeking new and better ways to approach problems. In my previous role as a software developer, I gained hands-on experience with Winform applications using C\# programming language and SQL server databases. Additionally, my work involved developing data-driven applications, which sparked my interest in the field of data science. I am eager to transition into a data scientist role, where I can leverage my skills and experience to tackle new challenges and add value to the company. I am confident that my passion for problem-solving and my ability to learn quickly will make me a valuable asset to any organization.
 \end{cvparagraph}
