--- a/sections/resume.tex
+++ b/sections/resume.tex
@@ -5,8 +5,8 @@
 
 % Print the header with above personal informations
 % Give optional argument to change alignment(C: center, L: left, R: right)
-\photo[circle,edge,left]{profile}
-\makecvheader[L]
+% \photo[circle,edge,left]{profile}
+\makecvheader[C]
 
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
