--- a/sections/resume.tex
+++ b/sections/resume.tex
@@ -5,7 +5,9 @@
 
 % Print the header with above personal informations
 % Give optional argument to change alignment(C: center, L: left, R: right)
-% \photo[circle,edge,left]{profile}
+\ifrenderphoto
+  \photo[circle,edge,left]{profile}
+\fi
 \makecvheader[C]
 
 % Print the footer with 3 arguments(<left>, <center>, <right>)
