syncronous update added.

--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Work Experience}
+\cvsection{Experience}
 
 
 %-------------------------------------------------------------------------------
@@ -10,19 +10,71 @@
 \begin{cventries}
 
 %---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {Indian Institute of Technology} % Organisation
-    {Indore, India} % Location
-    {Sept 2020 - Aug 2021} % Date(s)
+    \cventry
+    {Software Developer} % Job title
+    {Hadish Ertebat e Nasl e No} % Organisation
+    {Shiraz, Iran} % Location
+    {Aug 2020 - Jul 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Collaborated with a four-person team to develop a CNN model that utilised YOLO as a foundation to improve the accuracy of ambient lighting conditions in the Mobile net architecture.}
-        \item {Automated and optimised the data handling process for traffic signs, working with Ubuntu 20.04 did shell scripting, and employed other Linux tools.}
-        \item {Significantly boosted the model's accuracy by 60\%, which was yielding an accuracy of 70-78\% under Indian street light. The older models, had an accuracy of 10-15\%.}
-        \item {\textbf{Technical Skills:} Python with PyTorch, NumPy, Matplotlib, Pandas, Scikit-learn, C++, Ubuntu Linux, Linux tools, Apt, Scripting, Git.}
-        \item {\textbf{Soft Skills:} Teamwork, Time Management, Communication, Presentation skills.}
+        \item {Led the development and maintenance of the accounting program used by the company.}
+        \item {Devised a solution to improve the Net Profit calculation in the accounting app and implemented the solution which leads to an increase of 15\% in the profit of the company.}
+        \item {Actively participated in code reviews and provided guidance to junior developers on the team.}
+        \item {Utilized C\#, SQL, Git, and ASP .Net Core to build efficient, scalable and secure code.
+        \\\textbf{Technical Skills:} CI/CD, Microsoft Azure, Back-End Web Development, Microsoft SQL Server, Entity Framework
+        \\\textbf{Soft Skills:} Leadership, Problem-solving, Teamwork, Technical Proficiency, Continuous Learning}
       \end{cvitems}
     }
+%---------------------------------------------------------
 
+%---------------------------------------------------------
+    \cventry
+    {System Administrator} % Job title
+    {Hadish Ertebat e Nasl e No} % Organisation
+    {Shiraz, Iran} % Location
+    {May 2017 - Aug 2020} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Maintained the company's computer systems, ensuring their smooth and continuous operation.}
+        \item {Quickly troubleshooted and resolved network and computer issues, resulting in a reduction of downtime by 30\%.}
+        \item {Configured and managed Microsoft Active Directory, Cisco Routing and Switching, and other network equipment.}
+        \item {Implemented a disaster recovery plan that helped the company to recover quickly from unexpected failures.
+        \\\textbf{Technical Skills:} Active Directory, Windows Server, Cisco Networking, LAN-WAN, Network Troubleshooting
+        \\\textbf{Soft Skills:} Problem-solving, Adaptability, Attention to Detail, Technical Proficiency}
+      \end{cvitems}
+    }
+%---------------------------------------------------------
+
+%---------------------------------------------------------
+  \cventry
+    {Network Technician (Internship)} % Job title
+    {Pars Novin Co.} % Organisation
+    {Shiraz, Iran} % Location
+    {Feb 2017 - May 2017} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Installed and configured network equipment for clients, including LAN networks and passive equipment.}
+        \item {Assisted with the design of network infrastructure, which led to the successful implementation of several projects.}
+        \item {Troubleshot and resolved connection problems for clients, resulting in increased customer satisfaction.
+        \\\textbf{Technical Skills:} LAN-WAN, Network Design, Network Troubleshooting, IPv4, CCTV Installation
+        \\\textbf{Soft Skills:} Teamwork, Communication, Problem solving}
+      \end{cvitems}
+    }
+%---------------------------------------------------------
+
+%---------------------------------------------------------
+    \cventry
+    {Store Assistant} % Job title
+    {Hadish Computers} % Organisation
+    {Shiraz, Iran} % Location
+    {May 2015 - Feb 2017} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Built strong customer relationships, resulting in a notable 20\% increase in sales and fostering trust and loyalty.}
+        \item {Developed in-depth product knowledge to provide accurate information and enable informed purchasing decisions.}
+        \item {Adapted sales techniques to meet individual customer needs, enhancing satisfaction and loyalty.
+        \\\textbf{Soft Skills:} Relationship Building, Communication, Teamwork, Adaptability}
+      \end{cvitems}
+    }
+%---------------------------------------------------------
 \end{cventries}
