--- a/sections/resume.tex
+++ b/sections/resume.tex
@@ -25,9 +25,12 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{../cv/summary.tex}
+\vspace{-5mm}
 \input{../cv/education.tex}
+\vspace{-5mm}
 \input{../cv/experience.tex}
-\input{../cv/skills.tex}
+\vspace{-5mm}
+% \input{../cv/skills.tex}
 \input{../cv/interests.tex}
 
 %\vspace*{\fill}
