--- a/cv/education.tex
+++ b/cv/education.tex
@@ -11,39 +11,30 @@
 
 %---------------------------------------------------------
   \cventry
-    {MSc in Data Science and Analysis} % Degree
-    {University of Leeds} % Institution
-    {Leeds, UK} % Location
-    {Sept 2021 - Current} % Date(s)
+    {MSc in Data Science with Artificial Intelligence} % Degree
+    {University of Exeter} % Institution
+    {Exeter, UK} % Location
+    {} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Head of School International Excellence Scholar}
-        \item {Working as a PAL Mentor}
-        \item {\textbf{Courses:} Data Science, Programming for Data Science, Knowledge Representation and Reasoning, Statistical Theory and Methods, Learning Skills through Case Studies, Artificial Intelligence, Machine Learning, Statistical Learning}
+        \item {Participated in advanced coursework on machine learning, and computer vision.}
+        \item {Proficient in using various Python libraries such as Keras, Scikit-learn, Pandas, Numpy, and SciPy for data manipulation, analysis, and visualization.}
+        \item {Utilized Tensorflow for creating and training neural networks.}
+        %\item {\textbf{Courses:} }
       \end{cvitems}
     }
     
   \cventry
-    {BTech in Information Technology} % Degree
-    {Madhav Institute of Technology and Science} % Institution
-    {Gwalior, India} % Location
-    {May 2016 - May 2020} % Date(s)
+    {BSc in Computer Engineering - Software} % Degree
+    {Pasargad Institute of Higher Education} % Institution
+    {Shiraz, Iran} % Location
+    {} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item {Graduated with Distinction}
-        \item {Selected for Industrial Visit among the top of the class} 
-      \end{cvitems}
-    }
-    
-  \cventry
-    {High School} % Degree
-    {Atomic Energy Central School} % Institution
-    {Indore, India} % Location
-    {Apr 2014 - Apr 2016} % Date(s)
-    {
-      \begin{cvitems} % Description(s) bullet points
-        \item {Passed with Distinction}
-        \item {Specialised in Physics, Chemistry, and Maths with Computer Science}
+        \item {Participated in ACM programming contests (East Asia Division) 3 times.}
+        \item {TA for Database design, Algorithm design, Data structure, and Automata courses.}
+        \item {Completed several projects in C++ programming, including implementation of efficient data structures and algorithms, which helped me to gain proficiency in C++.}
       \end{cvitems}
     }
 %---------------------------------------------------------
