updating resume details

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -17,9 +17,7 @@
     {} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Participated in advanced coursework on machine learning, and computer vision.}
-        \item {Proficient in using various Python libraries such as Keras, Scikit-learn, Pandas, Numpy, and SciPy for data manipulation, analysis, and visualization.}
-        \item {Utilized Tensorflow for creating and training neural networks.}
+        \item {Participated in advanced coursework on machine learning, and computer vision • Proficient in using various Python libraries such as Keras, Scikit-learn, Pandas, Numpy, and SciPy for data manipulation, analysis, and visualization • Utilized Tensorflow for creating and training neural networks}
         %\item {\textbf{Courses:} }
       \end{cvitems}
     }
@@ -31,10 +29,7 @@
     {} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
-        \item {Graduated with Distinction}
-        \item {Participated in ACM programming contests (East Asia Division) 3 times.}
-        \item {TA for Database design, Algorithm design, Data structure, and Automata courses.}
-        \item {Completed several projects in C++ programming, including implementation of efficient data structures and algorithms, which helped me to gain proficiency in C++.}
+        \item {Graduated with Distinction • TA for Database design, Algorithm design, Data structure, and Automata courses.}
       \end{cvitems}
     }
 %---------------------------------------------------------
