--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -7,20 +7,56 @@
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
+
+\vspace{-3mm}
+\begin{minipage}[t]{0.48\textwidth}
+% \cvsubsection{Frameworks and Softwares}
+%---------------------------------------------------------
 \begin{cvskills}
-
 %---------------------------------------------------------
   \cvskill
-    {Programming} % Category
-    {Python (Pandas, PyTorch, NumPy, Scikit‑learn. etc.), C\#(ASP .NET, Entity framework, Fluent API), C/C++, HTML/CSS, JavaScript, SQL.} % Skills
-
+  {C\#} % Category
+  {• ASP .NET • Entity framework • Identity framework • Web API • MVC design patterns • WinForms} % Skills
 %---------------------------------------------------------
   \cvskill
-    {Miscellaneous} % Category
-    {Linux, Shell (Bash/Zsh), \LaTeX (Overleaf), Microsoft Office, Git.} % Skills
+  {Python}
+  {• NumPy • Pandas • Matplotlib • Data Visulization • Data Analysis • Machine learning • Big data}
 %---------------------------------------------------------
   \cvskill
-    {Soft Skills} % Category
-    {Time Management, Teamwork, Problem-solving, Documentation, Critical-Thinking.} % Skills
-
+  {SQL}
+  {• Microsoft SQL Server • Database design • Stored procedures • Database management}
+%---------------------------------------------------------
 \end{cvskills}
+%---------------------------------------------------------
+\end{minipage}
+\hspace{0.04\textwidth}
+\begin{minipage}[t]{0.48\textwidth}
+% \cvsubsection{Frameworks and Softwares}
+%---------------------------------------------------------
+\begin{cvskills}
+%---------------------------------------------------------
+  \cvskill
+  {C/C++}
+  {• Data structures • Algorithms • Dynamic programming • Embeded programing • Micro-controller programming}
+%---------------------------------------------------------
+  \cvskill
+  {Linux}
+  {• Shell(Bash/Zsh) scripts • Network configuration • Web deployment • SSH}
+%---------------------------------------------------------
+  \cvskill
+  {Misc.} % Category
+  {• Linux • Shell (Bash/Zsh) • \LaTeX (Overleaf) • Microsoft Office • Git} % Skills
+%---------------------------------------------------------
+\end{cvskills}
+%---------------------------------------------------------
+\end{minipage}
+% \cvsubsection{Miscellaneous}
+% %---------------------------------------------------------
+% \begin{cvskills}  
+% %---------------------------------------------------------
+%   \cvskill
+%     {Miscellaneous} % Category
+%     {Linux • Shell (Bash/Zsh) • \LaTeX (Overleaf) • Microsoft Office • Git} % Skills
+% %---------------------------------------------------------
+% \end{cvskills}
+% %---------------------------------------------------------
