--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -1,14 +1,20 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Personal Profile}
+% \cvsection{Personal Profile}
 
-
+\vspace{-1mm}
+\color{sectiondivider}\vhrulefill{0.9pt}
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
+%\hspace{0.1\textwidth}
+%\begin{minipage}[c]{1.0\textwidth}
+%\centering
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-As a software developer, I have a strong drive to continuously improve my skills and find innovative solutions to challenges. I view every obstacle as an opportunity to learn and grow, and I am constantly seeking new and better ways to approach problems. In my previous role as a software developer, I gained hands-on experience with Winform applications using C\# programming language and SQL server databases. Additionally, my work involved developing data-driven applications, which sparked my interest in the field of data science. I am eager to transition into a data scientist role, where I can leverage my skills and experience to tackle new challenges and add value to the company. I am confident that my passion for problem-solving and my ability to learn quickly will make me a valuable asset to any organization.
+A University of Exeter post-graduate student enrolled in the Data Science with Artificial Intelligence program, specializing in software development, algorithms, and machine learning, with 2+ years of expertise in .Net tools and SQL databases, searching primarily for Software Development positions in the UK.%
+%Jovial developer with a can-do attitude, 2 years of dynamic experience in web development, algorithms and machine learning, and a deep understanding of various programming languages. Currently looking for software development positions in the UK.
 \end{cvparagraph}
+%\hspace{0.2\textwidth}
