--- a/cv/interests.tex
+++ b/cv/interests.tex
@@ -14,15 +14,22 @@
 %---------------------------------------------------------
     \cvskill
     {Learning} % Interest
-    {I enjoy learning about every topic. When ever I am siting by my self I wonder how a crtain thing works and I crave to search and learn about it.} % Description  
+    {I am driven by a desire to continue learning and growing my arsenal of skills as a developer.} % Description  
 %---------------------------------------------------------
   \cvskill
-    {Linux} % Interest
-    {Since 2017, I have been in love with Linux. I recently switched to Mac OS, which feels like a premium of Linux.} % Description
+    {Shell scripts} % Interest
+    {I enjoy using bash scripts to automate my tasks. I think it's like a glue that can stick different program together.} % Description
 %---------------------------------------------------------
   \cvskill
     {Video Games} % Interest
-    {I always had the gaming gene. I mostly play on my phone.} % Description
+    {I always had the gaming gene. I mostly play on my phone and FPS games are my favourite.} % Description
 %---------------------------------------------------------
-
+  \cvskill
+    {Series}
+    {“Mr. Robot" was the reason I fell in love with shell programming.}
+%---------------------------------------------------------
+  %\cvskill
+  %  {Chess}
+  %  {Playing is hard. But watching legends play is fun!}
+%---------------------------------------------------------
 \end{cvskills}
