--- a/sections/resume.tex
+++ b/sections/resume.tex
@@ -9,7 +9,7 @@
   \photo[circle,edge,left]{profile}
   \makecvheader[L]
 \else
-  \makecvheader[C]
+  \makecvheader[L]
 \fi
 
 % Print the footer with 3 arguments(<left>, <center>, <right>)
@@ -24,13 +24,17 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
+\vspace{-4mm}
 \input{../cv/summary.tex}
-\vspace{-5mm}
-\input{../cv/education.tex}
-\vspace{-5mm}
+\vspace{-4mm}
 \input{../cv/experience.tex}
-\vspace{-5mm}
-% \input{../cv/skills.tex}
+\vspace{-4mm}
+\input{../cv/extracurricular.tex}
+\vspace{-4mm}
+\input{../cv/skills.tex}
+\vspace{-4mm}
+\input{../cv/education.tex}
+\vspace{-4mm}
 \input{../cv/interests.tex}
 
 %\vspace*{\fill}
