Changing the render.sh so it can monitor the changes in tex fils.

--- a/cv/interests.tex
+++ b/cv/interests.tex
@@ -18,7 +18,7 @@
 %---------------------------------------------------------
   \cvskill
     {Shell scripts} % Interest
-    {I enjoy using bash scripts to automate my tasks. I think it's like a glue that can stick different program together.} % Description
+    {I enjoy using bash scripts to automate my tasks. I think it's like a glue that can stick different programs together.} % Description
 %---------------------------------------------------------
   \cvskill
     {Video Games} % Interest
