section changed to reflect specility in data science

--- a/cv/education.tex
+++ b/cv/education.tex
@@ -1,9 +1,8 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Education}
-
-
+\cvsection{Education}\\
+\vspace{-3mm}
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
