--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -14,15 +14,15 @@
     {Hadish Communication Co.} % Organisation
     {Software Developer} % Job title
     {Shiraz, Iran} % Location
-    {Aug 2020 - Jul 2022} % Date(s)
+    {Aug 2020 - Aug 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Led the development and maintenance of the accounting program used by the company.}
-        \item {Devised and implemented a solution to improve the net profit calculation in the accounting app, resulting in a 15\% increase in company profits.}
+        \item {Utilize SQL expertise in a BI environment for comprehensive data analysis, enabling data-driven insights.}
+        \item {Create integrated dashboards and communicate actionable analytical insights to senior leaders, driving business growth.}
+        \item {Led the successful development and maintenance of a robust accounting program, instrumental in streamlining financial processes.}
+        \item {Devised and implemented an innovative solution within the accounting app, resulting in a remarkable 15\% increase in company profits.}
         \item {Actively participated in code reviews and provided guidance to junior developers on the team.}
-        \item {Utilized C\#, SQL, Git, and ASP .Net Core to build efficient, scalable and secure code.
-        \\\textbf{Technical Skills:} CI/CD, Code review, Source Control, .Net Framework, 
-        \\\textbf{Soft Skills:} Leadership, Technical Proficiency, Continuous Learning}%
+        \item {Utilized C\#, SQL, Git, and .Net Core to build efficient, scalable and secure code.}%
       \end{cvitems}
     }%
 %---------------------------------------------------------
@@ -36,9 +36,9 @@
         \item {Maintained the company's computer systems, ensuring their smooth and continuous operation.}
         \item {Quickly troubleshot and resolved network and computer issues, resulting in a reduction of recorded downtime by 30\%.}
         \item {Configured and managed Microsoft Active Directory, Cisco Routing and Switching, and other network equipment.}
-        \item {Implemented a disaster recovery plan that helped the company to recover quickly from unexpected failures.
-        \\\textbf{Technical Skills:} Active Directory, Windows Server, Cisco Networking, LAN-WAN, Network Troubleshooting
-        \\\textbf{Soft Skills:} Problem-solving, Adaptability, Attention to Detail}%
+        \item {Implemented a disaster recovery plan that helped the company to recover quickly from unexpected failures.}
+        % \\\textbf{Technical Skills:} Active Directory, Windows Server, Cisco Networking, LAN-WAN, Network Troubleshooting
+        % \\\textbf{Soft Skills:} Problem-solving, Adaptability, Attention to Detail}%
       \end{cvitems}%
     }%
 %---------------------------------------------------------
