--- a/cv/skills.tex
+++ b/cv/skills.tex
@@ -1,40 +1,39 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Skills}
-
-
+\cvsection{Skills}\\
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-
-\vspace{-3mm}
-\begin{minipage}[t]{0.48\textwidth}
+\begin{minipage}[t]{0.48\linewidth}
 % \cvsubsection{Frameworks and Softwares}
 %---------------------------------------------------------
 \begin{cvskills}
 %---------------------------------------------------------
-  \cvskill
-  {C\#} % Category
-  {• ASP .NET • Entity framework • Identity framework • Web API • MVC design patterns • WinForms} % Skills
+\cvskill
+{Python}
+{• NumPy • Pandas • Keras • Tensorflow • Matplotlib • Scikit Learn • SciPy}
 %---------------------------------------------------------
-  \cvskill
-  {Python}
-  {• NumPy • Pandas • Matplotlib • Data Visulization • Data Analysis • Machine learning • Big data}
+\cvskill
+{SQL}
+{• Microsoft SQL Server • Database design • Stored procedures • Database management}
 %---------------------------------------------------------
-  \cvskill
-  {SQL}
-  {• Microsoft SQL Server • Database design • Stored procedures • Database management}
+\cvskill
+{Misc.} % Category
+{• Deep Learning • Data Visulization • Data Analysis • Machine learning • Big data • Git} % Skills
 %---------------------------------------------------------
 \end{cvskills}
 %---------------------------------------------------------
 \end{minipage}
-\hspace{0.04\textwidth}
-\begin{minipage}[t]{0.48\textwidth}
+\hspace{0.04\linewidth}
+\begin{minipage}[t]{0.48\linewidth}
 % \cvsubsection{Frameworks and Softwares}
 %---------------------------------------------------------
 \begin{cvskills}
 %---------------------------------------------------------
+\cvskill
+{C\#} % Category
+{• ASP .NET • Entity framework • Identity framework • Web API • MVC design patterns • WinForms} % Skills
   \cvskill
   {C/C++}
   {• Data structures • Algorithms • Dynamic programming • Embeded programing • Micro-controller programming}
@@ -43,13 +42,11 @@
   {Linux}
   {• Shell(Bash/Zsh) scripts • Network configuration • Web deployment • SSH}
 %---------------------------------------------------------
-  \cvskill
-  {Misc.} % Category
-  {• Linux • Shell (Bash/Zsh) • \LaTeX (Overleaf) • Microsoft Office • Git} % Skills
 %---------------------------------------------------------
 \end{cvskills}
 %---------------------------------------------------------
-\end{minipage}
+\end{minipage}%
+\vspace{3mm}\\
 % \cvsubsection{Miscellaneous}
 % %---------------------------------------------------------
 % \begin{cvskills}  
