--- a/sections/cover.tex
+++ b/sections/cover.tex
@@ -36,19 +36,27 @@
 % Defines an enclosure for letter (cover letter only, optional)
 % Usage: \letterenclosure[<enclosure name>]{<enclosure>}
 \begin{cvletter}
-\recipientname{Recipient name}
-\recipientaddress{Recipient address}
-%\lettertitle{}
+\recipientname{LiveScore Group\texttrademark}
+\recipientaddress{25 Golden Square\\London\\w1f 9ls}
+\lettertitle{Application for Insights Analyst position}
 \letterdate{\today}
-\letteropening{This is the opening,}
+\letteropening{Dear hiring manager,}
 
 
-\letterclosing{Sincerely yours,}
-%\letterenclosure[Sina]{I have no idea what's going on here}
+\letterclosing{Sincerely,}
+% \letterenclosure[Sina]{I have no idea what's going on here}
 
 \makelettertitle
 
-This the body of the letter \_I think so\_.
+I am writing to express my enthusiastic interest in the Insights Analyst role at LiveScore Group\texttrademark. As a highly skilled Data Scientist with a proven track record of driving innovation and delivering actionable insights, I believe my expertise aligns perfectly with your mission to innovate and add value wherever possible.
+With over 5 years of experience in the Technology sector and 2+ years of specialized proficiency in SQL-based data analysis, I am well-versed in partnering with various teams to understand their business needs analytically. The opportunity to be part of a rapidly expanding business and a team that is empowered to make change truly excites me, and I am eager to contribute to the long-term success of the Insights team at LiveScore Group\texttrademark.
+
+In my previous role as a Software Developer at Hadish Communication Co., I employed my expertise in SQL and created various views and reports of customer online payments, aiding in payment verification and streamlining the accounting division. Additionally, I implemented an integrated data-driven dashboard and successfully persuaded the leaders to take action based on the insights provided by it.
+Throughout my career, I have demonstrated a passion for continuous learning and analytical creativity. This has enabled me to innovate in the face of complex business problems, allowing me to provide practical and effective solutions. Moreover, my technical proficiency extends beyond SQL, and I am confident in my ability to adapt and thrive in a dynamic and evolving environment like LiveScore Group\texttrademark.
+
+I am confident that my analytical skills, technical expertise, and persuasive communication abilities would make me a valuable asset to the Insights team. I am eager to leverage my knowledge and experience to become a subject matter expert on the customer journey, from acquisition to deposit, and to support the development, setting, and actioning of KPI's throughout the business.
+
+Thank you for considering my application. I am genuinely excited about the opportunity to contribute to the success of LiveScore Group\texttrademark, and I am eager to discuss in more detail how my skills and experience align with the Insights role. I look forward to the possibility of joining your esteemed team.
 
 \makeletterclosing
 \end{cvletter}
