--- a/sections/resume.tex
+++ b/sections/resume.tex
@@ -34,8 +34,8 @@
 \input{../cv/skills.tex}
 \vspace{-4mm}
 \input{../cv/education.tex}
-\vspace{-4mm}
-\input{../cv/interests.tex}
+%\vspace{-4mm}
+%\input{../cv/interests.tex}
 
 %\vspace*{\fill}
 %\centering{\textbf{References available upon request.}}
