--- a/cv/extracurricular.tex
+++ b/cv/extracurricular.tex
@@ -1,17 +1,47 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Projects}
-
-
+\cvsection{Projects}\\
 %-------------------------------------------------------------------------------
 %	CONTENT
 %-------------------------------------------------------------------------------
-\vspace{-3mm}
-\begin{minipage}[t]{0.49\textwidth}
+\begin{minipage}[t]{0.48\linewidth}
   
 \begin{cventries}
+
 %---------------------------------------------------------
+  \cventry
+  {Data Scientist} % Affiliation/role
+  {Stock Price Prediction: A Machine Learning Analysis} % Organization/group
+  {Exeter, UK} % Location
+  {Feb 2023} % Date(s)
+  {
+    \begin{cvitems} % Description(s) of experience/contributions/knowledge
+      \item {Explored prediction algorithms that showed the potential for predicting stock price behavior.}
+      \item {Explored the use of neural networks and ensemble methods as potential alternative approaches for predicting stock prices.}
+      \item {conducting a comprehensive analysis using cross-validation techniques on various stock exchanges.}
+    \end{cvitems}
+  } 
+%---------------------------------------------------------
+  \cventry
+  {Data Scientist}
+  {Tweeter : An Analysis of tweets statistics}
+  {Exeter, UK}
+  {Nov 2022}
+  {
+    \begin{cvitems}
+      \item {Utilized Python and Pandas to efficiently process the large dataset.}
+      \item {Investigated patterns and trends in tweet activity, including the number of tweets per day and weekdays vs. weekends comparison.}
+      \item {Employed data visualization techniques to present findings.}
+    \end{cvitems}
+  }
+%---------------------------------------------------------
+  \end{cventries}
+\end{minipage}
+\hspace{0.04\linewidth}
+\begin{minipage}[t]{0.48\linewidth}
+\begin{cventries}
+  %---------------------------------------------------------
   \cventry
     {Core Developer} % Affiliation/role
     {Shiraz Start-up Weekend} % Organization/group
@@ -23,7 +53,6 @@
         \item {Gained experience in Java for android app development and using C\# for web-api and Telegram bot development.}
       \end{cvitems}
     }
-
 %---------------------------------------------------------
   \cventry
     {Developer} % Affiliation/role
@@ -35,13 +64,9 @@
         \item {Designed and implemented the circuit board.}
         \item {Implemented the PID controller with C++.}
         \item {Gained experience in embeded programming.}
+        \item {Developed an understanding of circuit boards.}
       \end{cvitems}
       }
-  \end{cventries}
-\end{minipage}
-\hspace{0.02\textwidth}
-\begin{minipage}[t]{0.49\textwidth}
-\begin{cventries}
 %---------------------------------------------------------
   \cventry
     {C++ Programmer} % Affiliation/role
@@ -52,10 +77,11 @@
       \begin{cvitems} % Description(s) of experience/contributions/knowledge
         \item {Developed strategies for solving given problems.}
         \item {Implemented the agreed upon strategies with teammates.}
-        \item {Gaind experience in team work and agile development.}
+        \item {Gained experience in team work and agile development.}
       \end{cvitems}
     }
 \
 %---------------------------------------------------------
 \end{cventries}
-\end{minipage}\\
+\end{minipage}
+\vspace{3mm}\\
