--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -14,7 +14,8 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-A University of Exeter post-graduate student enrolled in the Data Science with Artificial Intelligence program, specializing in software development, algorithms, and machine learning, with 2+ years of expertise in .Net tools and SQL databases, searching primarily for Software Development positions in the UK.%
+Highly skilled Data Scientist with with 5+ years of experience in Technology and 2+ years of proven expertise in SQL-based data analysis, delivering innovative solutions. A University of Exeter post-graduate student enrolled in the Data Science with Artificial Intelligence. Experienced in communicating actionable insights to senior leaders, driving business growth. Ideal candidate for Data Analyst roles.
+%
 %Jovial developer with a can-do attitude, 2 years of dynamic experience in web development, algorithms and machine learning, and a deep understanding of various programming languages. Currently looking for software development positions in the UK.
 \end{cvparagraph}
 %\hspace{0.2\textwidth}
